--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AutoTestAI - API自动化测试平台</title>
+    <title>AutoTestAI - 用例管理</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <style>
         body {
             background-color: #f8f9fa;
+            margin: 0;
+            padding: 0;
+        }
+        
+        .container-fluid {
+            padding: 20px;
         }
 
         .status-success { color: #28a745; }
@@ -163,13 +169,13 @@
 </head>
 <body>
     <div class="container-fluid">
-        <!-- 头部 - 居中显示 -->
+        <!-- 页面头部 -->
         <div class="row header-gradient text-white p-4 mb-4">
             <div class="col text-center">
                 <h1 class="mb-2">
-                    <i class="bi bi-robot"></i> AutoTestAI
+                    <i class="bi bi-list-check"></i> 用例管理
                 </h1>
-                <p class="mb-0 opacity-75">AI驱动的API自动化测试平台</p>
+                <p class="mb-0 opacity-75">管理和执行API测试用例，实时监控测试状态</p>
             </div>
         </div>
 
