--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,166 +6,7 @@
     <title>AutoTestAI - 用例管理</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f8f9fa;
-            margin: 0;
-            padding: 0;
-        }
-        
-        .container-fluid {
-            padding: 20px;
-        }
-
-        .status-success { color: #28a745; }
-        .status-failed { color: #dc3545; }
-        .status-running { color: #ffc107; }
-
-        .card-header {
-            background-color: #f8f9fa;
-            border-bottom: 1px solid #dee2e6;
-        }
-
-        .test-item {
-            border-left: 4px solid #dee2e6;
-            transition: all 0.3s ease;
-            background-color: white;
-            height: 100%;
-        }
-
-        .test-item:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-        }
-
-        .test-item.success { border-left-color: #28a745; }
-        .test-item.failed { border-left-color: #dc3545; }
-        .test-item.running { border-left-color: #ffc107; }
-
-        .test-item .card {
-            border: none;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            transition: all 0.3s ease;
-        }
-
-        .test-item .card:hover {
-            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-        }
-
-        .test-item .card-header {
-            background-color: #f8f9fa;
-            border-bottom: 1px solid #dee2e6;
-            padding: 0.75rem 1rem;
-        }
-
-        .test-item .card-body {
-            padding: 1rem;
-        }
-
-        .execution-time {
-            font-size: 0.8em;
-            color: #6c757d;
-        }
-
-        .stats-card {
-            transition: all 0.3s ease;
-            border: none;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-
-        .stats-card:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-        }
-
-        .header-gradient {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        }
-
-        .btn-group .btn {
-            margin-left: 2px;
-        }
-
-        .test-description {
-            color: #6c757d;
-            font-size: 0.9em;
-            line-height: 1.4;
-        }
-
-        .test-meta {
-            font-size: 0.8em;
-            color: #6c757d;
-        }
-
-        .loading-spinner {
-            display: inline-block;
-            width: 16px;
-            height: 16px;
-            border: 2px solid #f3f3f3;
-            border-top: 2px solid #007bff;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        .toast-container {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            z-index: 9999;
-        }
-
-        .test-actions {
-            display: flex;
-            gap: 5px;
-            flex-wrap: wrap;
-        }
-
-        /* 搜索按钮样式 */
-        .search-btn {
-            transition: all 0.3s ease;
-        }
-
-        .search-btn:hover {
-            transform: scale(1.05);
-        }
-
-        .clear-btn {
-            transition: all 0.3s ease;
-        }
-
-        .clear-btn:hover {
-            background-color: #dc3545;
-            border-color: #dc3545;
-            color: white;
-        }
-
-        /* 搜索输入框聚焦效果 */
-        .search-input-group:focus-within {
-            box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-            border-color: #80bdff;
-        }
-
-        @media (max-width: 768px) {
-            .test-actions {
-                margin-top: 10px;
-            }
-
-            .btn-group {
-                display: flex;
-                flex-direction: column;
-                gap: 5px;
-            }
-
-            .btn-group .btn {
-                margin-left: 0;
-            }
-        }
-    </style>
+    <link href="css/common.css" rel="stylesheet">
 </head>
 <body>
     <div class="container-fluid">
