--- a/src/main/resources/static/left-menu.html
+++ b/src/main/resources/static/left-menu.html
@@ -6,449 +6,8 @@
     <title>AutoTestAI - 管理平台</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f8f9fa;
-            overflow-x: hidden;
-        }
-
-        /* 左侧菜单样式 */
-        .sidebar {
-            width: 280px;
-            height: 100vh;
-            background: linear-gradient(180deg, #2c3e50 0%, #34495e 100%);
-            border-right: 1px solid #34495e;
-            position: fixed;
-            left: 0;
-            top: 0;
-            overflow-y: auto;
-            z-index: 1000;
-            transition: all 0.3s ease;
-        }
-
-        .sidebar.collapsed {
-            width: 60px;
-        }
-
-        /* 侧边栏头部 */
-        .sidebar-header {
-            padding: 20px;
-            text-align: center;
-            border-bottom: 1px solid #34495e;
-            background: rgba(0,0,0,0.1);
-            position: relative;
-        }
-
-        .sidebar.collapsed .sidebar-header {
-            padding: 20px 10px;
-        }
-
-        .sidebar-header h3 {
-            color: #3498db;
-            margin: 0;
-            font-weight: 600;
-            font-size: 1.5rem;
-            transition: all 0.3s ease;
-        }
-
-        .sidebar.collapsed .sidebar-header h3 {
-            font-size: 0.8rem;
-        }
-
-        .sidebar-header p {
-            color: #bdc3c7;
-            margin: 5px 0 0 0;
-            font-size: 0.9em;
-            transition: all 0.3s ease;
-        }
-
-        .sidebar.collapsed .sidebar-header p {
-            display: none;
-        }
-
-        /* 折叠按钮 */
-        .collapse-btn {
-            position: absolute;
-            top: 15px;
-            right: 15px;
-            background: rgba(52, 152, 219, 0.2);
-            border: none;
-            color: #3498db;
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .collapse-btn:hover {
-            background: rgba(52, 152, 219, 0.4);
-            transform: scale(1.1);
-        }
-
-        .sidebar.collapsed .collapse-btn {
-            right: 50%;
-            transform: translateX(50%);
-        }
-
-        /* 导航菜单 */
-        .nav-menu {
-            padding: 20px 0;
-        }
-
-        .sidebar.collapsed .nav-menu {
-            padding: 10px 0;
-        }
-
-        /* 菜单分组 */
-        .nav-section {
-            margin: 20px 0;
-        }
-
-        .sidebar.collapsed .nav-section {
-            margin: 10px 0;
-        }
-
-        .nav-section-title {
-            color: #95a5a6;
-            font-size: 0.8em;
-            font-weight: 600;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            margin-bottom: 10px;
-            padding: 0 25px;
-            transition: all 0.3s ease;
-        }
-
-        .sidebar.collapsed .nav-section-title {
-            display: none;
-        }
-
-        /* 一级菜单项 */
-        .nav-item {
-            margin-bottom: 2px;
-        }
-
-        .nav-link {
-            color: #ecf0f1;
-            padding: 12px 25px;
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-            transition: all 0.3s ease;
-            border-left: 3px solid transparent;
-            cursor: pointer;
-            position: relative;
-        }
-
-        .sidebar.collapsed .nav-link {
-            padding: 12px 18px;
-            justify-content: center;
-        }
-
-        .nav-link:hover {
-            background-color: rgba(52, 152, 219, 0.1);
-            color: #3498db;
-            border-left-color: #3498db;
-        }
-
-        .nav-link.active {
-            background-color: rgba(52, 152, 219, 0.2);
-            color: #3498db;
-            border-left-color: #3498db;
-        }
-
-        .nav-link i {
-            margin-right: 12px;
-            width: 20px;
-            text-align: center;
-            font-size: 1.1em;
-            transition: all 0.3s ease;
-        }
-
-        .sidebar.collapsed .nav-link i {
-            margin-right: 0;
-        }
-
-        .nav-link-text {
-            flex: 1;
-            transition: all 0.3s ease;
-        }
-
-        .sidebar.collapsed .nav-link-text {
-            display: none;
-        }
-
-        .nav-link .badge {
-            margin-left: auto;
-            background-color: #e74c3c;
-            color: white;
-            font-size: 0.7em;
-            transition: all 0.3s ease;
-        }
-
-        .sidebar.collapsed .nav-link .badge {
-            display: none;
-        }
-
-        /* 展开/折叠箭头 */
-        .nav-arrow {
-            margin-left: auto;
-            transition: transform 0.3s ease;
-        }
-
-        .sidebar.collapsed .nav-arrow {
-            display: none;
-        }
-
-        .nav-link.expanded .nav-arrow {
-            transform: rotate(90deg);
-        }
-
-        /* 二级菜单 */
-        .sub-menu {
-            max-height: 0;
-            overflow: hidden;
-            transition: max-height 0.3s ease;
-            background: rgba(0, 0, 0, 0.1);
-        }
-
-        .sub-menu.show {
-            max-height: 500px;
-        }
-
-        .sidebar.collapsed .sub-menu {
-            display: none;
-        }
-
-        .sub-nav-link {
-            color: #bdc3c7;
-            padding: 8px 25px 8px 50px;
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-            transition: all 0.3s ease;
-            font-size: 0.9em;
-        }
-
-        .sub-nav-link:hover {
-            background-color: rgba(52, 152, 219, 0.1);
-            color: #3498db;
-        }
-
-        .sub-nav-link.active {
-            background-color: rgba(52, 152, 219, 0.2);
-            color: #3498db;
-        }
-
-        .sub-nav-link i {
-            margin-right: 8px;
-            width: 16px;
-            text-align: center;
-            font-size: 0.9em;
-        }
-
-        /* 用户信息 */
-        .user-info {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            padding: 20px;
-            background: rgba(0,0,0,0.1);
-            border-top: 1px solid #34495e;
-            transition: all 0.3s ease;
-        }
-
-        .sidebar.collapsed .user-info {
-            padding: 15px 10px;
-            text-align: center;
-        }
-
-        .user-avatar {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            background: linear-gradient(135deg, #3498db, #2980b9);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-right: 12px;
-            transition: all 0.3s ease;
-        }
-
-        .sidebar.collapsed .user-avatar {
-            margin-right: 0;
-            width: 30px;
-            height: 30px;
-        }
-
-        .user-details {
-            transition: all 0.3s ease;
-        }
-
-        .sidebar.collapsed .user-details {
-            display: none;
-        }
-
-        .user-details h6 {
-            margin: 0;
-            color: #ecf0f1;
-            font-size: 0.9em;
-        }
-
-        .user-details p {
-            margin: 0;
-            color: #bdc3c7;
-            font-size: 0.8em;
-        }
-
-        .logout-btn {
-            color: #e74c3c;
-            text-decoration: none;
-            font-size: 0.8em;
-            transition: color 0.3s ease;
-        }
-
-        .logout-btn:hover {
-            color: #c0392b;
-        }
-
-        .sidebar.collapsed .logout-btn {
-            display: none;
-        }
-
-        /* 主内容区域 */
-        .main-content {
-            margin-left: 280px;
-            transition: margin-left 0.3s ease;
-            min-height: 100vh;
-        }
-
-        .main-content.expanded {
-            margin-left: 60px;
-        }
-
-        /* 内容框架 */
-        .content-frame {
-            width: 100%;
-            height: 100vh;
-            border: none;
-            background: white;
-        }
-
-        /* 面包屑导航 */
-        .breadcrumb-nav {
-            background: white;
-            padding: 20px;
-            border-bottom: 1px solid #dee2e6;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-
-        .breadcrumb {
-            margin: 0;
-            background: transparent;
-        }
-
-        /* 响应式设计 */
-        @media (max-width: 768px) {
-            .sidebar {
-                transform: translateX(-100%);
-            }
-
-            .sidebar.show {
-                transform: translateX(0);
-            }
-
-            .main-content {
-                margin-left: 0;
-            }
-
-            .main-content.expanded {
-                margin-left: 0;
-            }
-
-            .mobile-toggle {
-                display: block !important;
-            }
-        }
-
-        .mobile-toggle {
-            display: none;
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 1001;
-            background: #3498db;
-            color: white;
-            border: none;
-            width: 40px;
-            height: 40px;
-            border-radius: 5px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-        }
-
-        /* 滚动条样式 */
-        .sidebar::-webkit-scrollbar {
-            width: 6px;
-        }
-
-        .sidebar::-webkit-scrollbar-track {
-            background: #34495e;
-        }
-
-        .sidebar::-webkit-scrollbar-thumb {
-            background: #7f8c8d;
-            border-radius: 3px;
-        }
-
-        .sidebar::-webkit-scrollbar-thumb:hover {
-            background: #95a5a6;
-        }
-
-        /* Tooltip样式 */
-        .tooltip {
-            position: absolute;
-            left: 70px;
-            top: 50%;
-            transform: translateY(-50%);
-            background: #2c3e50;
-            color: white;
-            padding: 8px 12px;
-            border-radius: 4px;
-            font-size: 0.8em;
-            white-space: nowrap;
-            opacity: 0;
-            visibility: hidden;
-            transition: all 0.3s ease;
-            z-index: 1000;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-        }
-
-        .tooltip::before {
-            content: '';
-            position: absolute;
-            right: 100%;
-            top: 50%;
-            transform: translateY(-50%);
-            border: 5px solid transparent;
-            border-right-color: #2c3e50;
-        }
-
-        .sidebar.collapsed .nav-link:hover .tooltip {
-            opacity: 1;
-            visibility: visible;
-        }
-    </style>
+        <link href="css/common.css" rel="stylesheet">
+    <link href="css/left-menu.css" rel="stylesheet">
 </head>
 <body>
     <!-- 移动端菜单切换按钮 -->
@@ -689,125 +248,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        // 页面加载完成后初始化
-        document.addEventListener('DOMContentLoaded', function() {
-            // 默认展开用例管理菜单
-            const testManagementMenu = document.getElementById('test-management');
-            const testManagementLink = document.querySelector('[data-target="test-management"]');
-            if (testManagementMenu && testManagementLink) {
-                testManagementMenu.classList.add('show');
-                testManagementLink.classList.add('expanded');
-            }
-
-            // 更新测试用例数量
-            updateTestCount();
-        });
-
-        // 切换侧边栏折叠状态
-        function toggleSidebar() {
-            const sidebar = document.getElementById('sidebar');
-            const mainContent = document.getElementById('mainContent');
-            const collapseIcon = document.getElementById('collapseIcon');
-
-            sidebar.classList.toggle('collapsed');
-            mainContent.classList.toggle('expanded');
-
-            if (sidebar.classList.contains('collapsed')) {
-                collapseIcon.className = 'bi bi-chevron-right';
-            } else {
-                collapseIcon.className = 'bi bi-chevron-left';
-            }
-        }
-
-        // 切换移动端侧边栏
-        function toggleMobileSidebar() {
-            const sidebar = document.getElementById('sidebar');
-            sidebar.classList.toggle('show');
-        }
-
-        // 切换子菜单
-        function toggleSubMenu(element) {
-            const targetId = element.getAttribute('data-target');
-            const subMenu = document.getElementById(targetId);
-            const arrow = element.querySelector('.nav-arrow');
-
-            // 关闭其他子菜单
-            document.querySelectorAll('.sub-menu.show').forEach(menu => {
-                if (menu.id !== targetId) {
-                    menu.classList.remove('show');
-                    const parentLink = document.querySelector(`[data-target="${menu.id}"]`);
-                    if (parentLink) {
-                        parentLink.classList.remove('expanded');
-                    }
-                }
-            });
-
-            // 切换当前子菜单
-            if (subMenu) {
-                subMenu.classList.toggle('show');
-                element.classList.toggle('expanded');
-            }
-        }
-
-        // 加载页面
-        function loadPage(url, category, pageName, element) {
-            // 更新面包屑
-            document.getElementById('breadcrumb-category').textContent = category;
-            document.getElementById('breadcrumb-page').textContent = pageName;
-
-            // 更新iframe源
-            document.getElementById('contentFrame').src = url;
-
-            // 更新菜单激活状态
-            document.querySelectorAll('.sub-nav-link').forEach(link => {
-                link.classList.remove('active');
-            });
-            element.classList.add('active');
-
-            // 移动端自动关闭菜单
-            if (window.innerWidth <= 768) {
-                document.getElementById('sidebar').classList.remove('show');
-            }
-        }
-
-        // 更新测试用例数量
-        function updateTestCount() {
-            fetch('/api/tests/statistics')
-                .then(response => response.json())
-                .then(data => {
-                    const totalTests = data.totalTests || 0;
-                    const badge = document.getElementById('test-count');
-                    if (badge) {
-                        badge.textContent = totalTests;
-                    }
-                })
-                .catch(error => {
-                    console.error('获取测试统计失败:', error);
-                });
-        }
-
-        // 退出登录
-        function logout() {
-            if (confirm('确定要退出登录吗？')) {
-                alert('退出登录功能待实现');
-            }
-        }
-
-        // 监听窗口大小变化
-        window.addEventListener('resize', function() {
-            if (window.innerWidth > 768) {
-                document.getElementById('sidebar').classList.remove('show');
-            }
-        });
-
-        // 定期更新测试数量
-        setInterval(updateTestCount, 30000); // 每30秒更新一次
-
-        // 监听iframe加载完成事件
-        document.getElementById('contentFrame').addEventListener('load', function() {
-            console.log('页面加载完成');
-        });
-    </script>
+        <script src="js/left-menu.js"></script>
 </body>
 </html>
