--- a/src/main/resources/static/menu-test.html
+++ b/src/main/resources/static/menu-test.html
@@ -6,13 +6,8 @@
     <title>菜单测试页面</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="css/common.css" rel="stylesheet">
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-        }
-        
         .sidebar {
             width: 280px;
             height: 100vh;
