bug模块展示成功

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -297,7 +297,7 @@
             <a href="#" class="menu-item" data-module="reports">
                 <i class="bi bi-graph-up"></i>
                 报告分析
-                <span class="badge bg-secondary">开发中</span>
+                <span class="badge bg-success">可用</span>
             </a>
             <a href="#" class="menu-item" data-module="settings">
                 <i class="bi bi-gear"></i>
